--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: justify;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -20,4 +20,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1{
+  text-align: center;
+  color: yellowgreen;
 }
