--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -15,6 +15,9 @@ header{
                 color: black;
                 text-decoration: none;
             }
+            .cart::after {
+                    content: " 🛒 ";
+            }
         }
     }
 }
