--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -5,6 +5,7 @@
     border-radius: 1rem;
     margin: 2rem;
     text-align: center;
+    color: black;
     &__container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
