--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,3 +1,4 @@
+
 header{
     display: flex;
     align-items: center;
@@ -13,7 +14,7 @@ header{
             display: inline;
             padding: 0.5rem;
             a{
-                color: black;
+                color: white;
                 text-decoration: none;
             }
             .cart::before {
