--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,10 @@ button{
     color: black;
     background-color: rgba(153, 205, 50, 0.589);
     border: 0.15rem solid rgba(153, 205, 50, 0.692);
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     padding: 0.5rem;
-    
+    margin: 1rem;
+    cursor: pointer;
 }
 button:hover{
     background-color: rgba(153, 205, 50, 0.089);
