--- a/src/components/ItemCards/Item.scss
+++ b/src/components/ItemCards/Item.scss
@@ -20,6 +20,8 @@
         flex-flow: column wrap;
         gap: 1rem;
         text-align: center;
+        list-style: none;
+        text-decoration: none
     }
     &__img{
         width: 100%;
