--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -18,9 +18,12 @@ header{
                 color: white;
                 text-decoration: none;
             }
-            .cart::before {
-                    content: " 🛒 ";
+            .cart{
+                color: white;
             }
+            // .cart::before {
+            //         content: " 🛒 ";
+            // }
         }
     }
 }
