--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: justify;
 }
