--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -18,7 +18,7 @@ header{
                 color: white;
                 text-decoration: none;
             }
-            .cart{
+            .cartWidget{
                 color: white;
             }
             // .cart::before {
