--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -20,10 +20,8 @@ header{
             }
             .cartWidget{
                 color: white;
+                margin-right: 0.5rem;
             }
-            // .cart::before {
-            //         content: " 🛒 ";
-            // }
         }
     }
 }
