--- a/src/components/ItemCards/Item.scss
+++ b/src/components/ItemCards/Item.scss
@@ -1,6 +1,6 @@
 .item{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,8 @@
         border-radius: 1rem;
         gap: 1rem;
         text-align: center;
+        align-items: center;
+        justify-content: center;
         color: black;
     }
     &__contenido{
@@ -21,12 +23,14 @@
         gap: 1rem;
         text-align: center;
         list-style: none;
-        text-decoration: none
+        text-decoration: none;
+        align-items: center;
+        justify-content: center;
     }
     &__img{
-        width: 100%;
-        max-height: 25rem;
+        width: 20rem;
         border-radius: 0.5rem;
+        align-self: center;
     }
     &__detail{
         display: flex;
@@ -40,7 +44,7 @@
         border-radius: 1rem;
     }
     &__img-detail{
-        height: 47rem;
+        height: 45rem;
         border-radius: 0.5rem;
     }
 }
