--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,25 +1,33 @@
 .cart{
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     margin: 2rem;
     &__container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    &__items{
         display: flex;
         align-items: center;
         border: 0.2rem solid rgb(207, 207, 207);
         padding: 0.5rem;
-        text-align: center;
     }
     &__img{
         width: 7vw;
         margin-right: 2rem;
+    }
+    &__content{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
     }
     &__total{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 2rem;
-        justify-content: center;
+        padding: 1rem;
         border: 0.2rem solid rgb(59, 58, 58);
     }
 }
