--- a/src/App.css
+++ b/src/App.css
@@ -3,30 +3,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 .App {
   text-align: justify;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+  flex: 1;
 }
 
 h1{
@@ -42,6 +30,7 @@ button{
     margin: 1rem;
     cursor: pointer;
 }
+
 button:hover{
     background-color: rgba(153, 205, 50, 0.089);
-    }
+}
