--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,3 @@
-
 header{
     display: flex;
     align-items: center;
@@ -21,6 +20,7 @@ header{
             .cartWidget{
                 color: white;
                 margin-right: 0.5rem;
+                height: 2.5vh;
             }
         }
     }
